--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,4 +1,5 @@
 <!-- FOOTER -->
   <footer>
     <p>© 2025 Carmen Varela Iglesias. All rights reserved.</p>
+    <div class="lineFooter"></div>
   </footer>
