--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,16 +6,10 @@
 }
 
                     /* FONTS */
-body, footer {
-  font-family: 'Lexend Deca', sans-serif; 
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+* {
+  font-family: 'Lexend Deca', sans-serif;
 }
 
-h1, h2, h3, p {
-  font-family: 'Lexend Deca', sans-serif; 
-}
 
                     /* NAVBAR */
 .navbar {
@@ -151,7 +145,7 @@ body {
 .overlay h1 {
   color: #CEFFD9;
   font-size: 85px;
-  margin: 130px 100px 50px;
+  margin: 130px 150px 50px;
 }
 
 .interactiveButtons div {
@@ -231,54 +225,122 @@ body {
 }
 
                     /* FOOTER */
-/* FOOTER */
-footer {
+footer{
+  color: #FFE6CB; 
   display: flex;
-  flex-direction: column;
-  align-items: flex-start; /* Centra el texto y la línea */
-  justify-content: center;
-  padding: 20px 40px; /* Espaciado interno */
-  color: #FFE6CB; /* Color del texto */
-  font-size: 1.5rem; /* Tamaño de la fuente */
-  position: relative; /* Necesario para posicionar la línea dentro del footer */
+  justify-content: space-between; 
+  align-items: center; 
+  padding: 20px 40px; 
+  position: fixed; 
+  width: 100%;  
+  z-index: 1000; 
+  font-size: 2rem;
+  flex-direction: column; 
 }
 
 footer p {
-  position: absolute; 
-  bottom: 40px; 
-  left: 200px; 
-  margin: 0; 
-  text-align: left; 
-  font-size: 1.7rem; 
-  color: #FFE6CB; 
+  align-self: flex-start; 
+  margin-left: 150px;      
+  margin-bottom: 15px;    
+  text-align: left;       
 }
 
 /* Línea del footer */
 .lineFooter {
-  width: 90%; /* La línea ocupa el 60% del ancho total */
-  height: 5px; /* Grosor de la línea */
-  background-color: rgb(141, 141, 141, 0.69); /* Color de la línea */
-  position: absolute; /* Posiciona la línea dentro del contenedor */
-  top: 0; /* Coloca la línea en la parte superior del contenedor */
-  left: 5%; /* Centra la línea horizontalmente */
+  width: 90%;
+  height: 5px;
+  background-color: rgb(141, 141, 141, 0.69);
+  position: absolute;  
+  top: 80px;           
+  left: 5%;
 }
 
-/* Pestañitas de la línea */
 .lineFooter::before,
 .lineFooter::after {
-  content: ''; /* Crea los elementos pseudo */
-  width: 5px; /* Grosor de las pestañitas */
-  height: 15px; /* Altura de las pestañitas */
-  background-color: rgb(141, 141, 141, 0.69); /* Color de las pestañitas */
+  content: '';
+  width: 5px;
+  height: 15px;
+  background-color: rgb(141, 141, 141, 0.69);
   position: absolute;
 }
 
 .lineFooter::before {
-  left: 0; /* Posiciona la pestañita al inicio de la línea */
-  top: -15px; /* Coloca la pestañita justo encima de la línea */
+  left: 0;
+  top: -15px;
 }
 
 .lineFooter::after {
-  right: 0; /* Posiciona la pestañita al final de la línea */
-  top: -15px; /* Coloca la pestañita justo encima de la línea */
+  right: 0;
+  top: -15px;
+}
+
+                    /* CONTACT */
+.frameContact {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-form {
+  background-color: rgb(217, 217, 217, 0.10);
+  padding:100px;
+  box-shadow: 0 8px 8px rgba(0,0,0,0.2);
+  width: 100%;
+  max-width: 900px;
+}
+
+.contact-form h2 {
+  margin-bottom: 20px;
+  text-align: center;
+  color: #CEFFD9;
+  font-size: 35px;
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 5px;
+  color: #ede8e8;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #CEFFD9;
+  background-color: rgba(122, 116, 116, 0.3);
+  font-size: 20px;
+  color: #CEFFD9; 
+  resize: none; 
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  outline: none;
+  border: 2px solid #CEFFD9;
+  background-color: rgba(122, 116, 116, 0.8);
+  box-shadow: 0 0 8px rgba(206, 255, 217, 0.7);
+  color: #CEFFD9; /* mantiene el color al escribir */
+}
+
+
+.contact-form button {
+  width: 30%;
+  padding: 12px;
+  border: none;
+  background-color: #7A7474;
+  color: #CEFFD9;
+  font-size: 22px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: block;
+  margin: 0 auto;
+  box-shadow: 0 6px 6px rgba(206, 255, 217, 0.5);
+}
+
+.contact-form button:hover {
+  background-color: #CEFFD9;
+  color:#7A7474
 }
