--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -110,36 +110,36 @@ body {
 
 /* Line */
 .line {
-  width: 90%; /* La línea ocupa el 60% del ancho total */
-  height: 5px; /* Grosor de la línea */
-  background-color: rgb(141, 141, 141, 0.69); /* Color de la línea */
-  position: absolute; /* Posiciona la línea dentro del contenedor */
-  top: 0; /* Coloca la línea en la parte superior del contenedor */
-  left: 5%; /* Deja un 20% libre a ambos lados */
+  width: 90%;
+  height: 5px; 
+  background-color: rgb(141, 141, 141, 0.69); 
+  position: absolute; 
+  top: 0; 
+  left: 5%;
 }
 
 .line::before,
 .line::after {
-  content: ''; /* Crea los elementos pseudo */
-  width: 5px; /* Grosor de las pestañitas */
-  height: 15px; /* Altura de las pestañitas */
-  background-color: rgb(141, 141, 141, 0.69); /* Color de las pestañitas */
+  content: '';
+  width: 5px; 
+  height: 15px; 
+  background-color: rgb(141, 141, 141, 0.69);
   position: absolute;
 }
 
 .line::before {
-  left: 0; /* Posiciona la pestañita al inicio de la línea */
-  top: 5px; /* Coloca la pestañita justo debajo de la línea */
+  left: 0; 
+  top: 5px; 
 }
 
 .line::after {
-  right: 0; /* Posiciona la pestañita al final de la línea */
-  top: 5px; /* Coloca la pestañita justo debajo de la línea */
+  right: 0; 
+  top: 5px;
 }
 
 .overlay {
-  position: relative; /* Necesario para posicionar la línea roja dentro del contenedor */
-  margin-top: 150px; /* Ajusta el margen para que no se solape con el navbar */
+  position: relative; 
+  margin-top: 150px; 
 }
 
 .overlay h1 {
@@ -174,7 +174,6 @@ body {
 }
 
 /* hover efect to seccion */
-
 .interactiveMe:hover p {
   font-size: 2rem;
   font-weight: bold;
@@ -322,7 +321,7 @@ footer p {
   border: 2px solid #CEFFD9;
   background-color: rgba(122, 116, 116, 0.8);
   box-shadow: 0 0 8px rgba(206, 255, 217, 0.7);
-  color: #CEFFD9; /* mantiene el color al escribir */
+  color: #CEFFD9; 
 }
 
 
