--- a/src/components/aboutMe.html
+++ b/src/components/aboutMe.html
@@ -2,14 +2,17 @@
     <h1>
         I´m Carmen Varela Iglesias
     </h1>
-    <img src="./src/assets/img/png/pngWeb/meEyes.jpg" alt="Carmen Varela Iglesias photo"></img>
+    <div class="photoAboutMe">
+        <img src="../assets/img/png/pngWeb/whoIam.jpg" alt="Carmen Varela Iglesias photo"></img>
+    </div>
     <div class="textAboutMe">
         <p>
             <b>No busco ser la mejor, sino dar siempre lo mejor de mí.</b>
         </p>
         <div>
             <p>
-                Soy desarrolladora front-end en formación considero que cuento con una base sólida en HTML5, CSS3 y JavaScript, además de
+                Soy desarrolladora front-end en formación considero que cuento con una base sólida en HTML5, CSS3 y
+                JavaScript, además de
                 experiencia en control de versiones con Git y GitHub.</p>
             <p>
                 Durante mis FCT autogestionadas, colaboré en AndaluGeeks ONG, participando en el desarrollo de una
@@ -58,7 +61,7 @@
             </ul>
         </div>
         <div>
-            <button>CV aquí</button>
+            <button src="src\CV.html">CV aquí</button>
         </div>
     </div>
 </div>
