--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -5,12 +5,11 @@
     </button>
     <div class="navbar-menu">
       <ul>
-        <li><a href="#index">Home Page</a></li>
-        <li><a href="#aboutMe">About Me</a></li>
-        <li><a href="#cv">Portfolio</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#videoBlog">Introduction Video</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="./index.html">Home Page</a></li>
+        <li><a href="../components/aboutMe.html">About Me</a></li>
+        <li><a href="./CV.html">Curriculum Vitae</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
